awx-operator-2.19.1/awx-service.yaml
apiVersion: v1
kind: Service
metadata: 
   name: awx-service
   namespace: awx
spec: 
  selector: 
    app: awx
  ports: 
    - protocol: TCP
      port: 443
      targetPort: 80
      nodePort: 30080
  type: NodePort
