awx-operator-2.19.1/awx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
   name: awx-ingress
   namespace: awx
   annotations: 
     nginx.ingress.kubernetes.io/rewrite-target: /
spec: 
  rules: 
   - host: szdeho-sd220046.sandoz.net
     http:
       paths: 
        - path: /
          pathType: Prefix
          backend: 
            service: 
              name: awx-service
              port: 
                number: 80
  tls: 
   - hosts: 
      - szdeho-sd220046.sandoz.net 
     secretName: awx-ssl-secret
