awx-operator-2.19.1/awx-tls-secret.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
   name: awx-ingress
   namespace: awx
   annotations:
        nginx.ingress.kubernetes.io/ssl-redirect: "true"
        nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
        #ssl-redirect: "true"
spec: 
  tls:
   - hosts: 
      - szdeho-sd220046.sandoz.net
     secretName: awx-tls-secret
  rules:
   - host: szdeho-sd220046.sandoz.net
     http:
       paths:
         - path: /
           pathType: Prefix
           backend:
               service:
                  name: sandoz-demo-service
                  port: 
                    number: 8052
